# tsz

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  TODO.md  task_plan.md
crates/tsz-cli/: Cargo.toml
crates/tsz-cli/src/: main.rs
crates/tsz-compiler/: Cargo.toml
crates/tsz-compiler/runtime/: tsz_runtime.c
crates/tsz-compiler/src/: ast.rs  codegen.rs  diagnostics.rs  error.rs  hir.rs  lexer.rs  lib.rs  linker.rs  parser.rs  resolver.rs  span.rs  typecheck.rs
crates/tsz-compiler/src/codegen/: expr.rs  runtime.rs  stmt.rs  string_pool.rs  user_fn.rs  wrapper.rs
crates/tsz-compiler/src/codegen/expr/: ops.rs
crates/tsz-compiler/src/parser/: expr.rs  stmt.rs  string.rs  tests.rs
crates/tsz-compiler/src/typecheck/: lower.rs
crates/tsz-compiler/src/typecheck/lower/: assign.rs  const_eval.rs  flow.rs  stmt.rs
crates/tsz-compiler/tests/: build_and_run.rs  const_folding.rs  syntax_polish.rs
docs/: tsz-spec.md
examples/: assign.ts  console-log.ts  const.ts  control-flow.ts  exit42.ts  let.ts  syntax-polish-lib.ts  syntax-polish.ts
examples/pkg-import/: package.json
examples/pkg-import/src/: lib.ts  main.ts
