[package]
name = "tsz-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cranelift-codegen = "0.114.0"
cranelift-frontend = "0.114.0"
cranelift-module = "0.114.0"
cranelift-native = "0.114.0"
cranelift-object = "0.114.0"
target-lexicon = "0.13.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "process", "rt"] }
